[workspace]
resolver = "2"
members = [
    "ipmb",
    "ipmb-derive",
    "ipmb-ffi",
    "ipmb-js",
]

[workspace.package]
rust-version = "1.65"

[workspace.dependencies.ipmb]
version = "0.8.3"
path = "ipmb"

[workspace.dependencies.ipmb-derive]
version = "0.5.1"
path = "ipmb-derive"

[profile.dev]
panic = "abort"
debug = "line-tables-only"

[profile.release]
panic = "abort"
lto = true
debug = true
split-debuginfo = "packed"
