[package]
name = "ipmb-derive"
version = "0.5.0"
edition = "2021"
description = "ipmb-derive"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bytedance/ipmb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.20"
syn = "1.0.98"