[package]
name = "ipmb-js"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "2.16.13"
napi = { version = "2.16.16", features = ["napi4"] }
ipmb.workspace = true

[build-dependencies]
napi-build = "=2.0.1"
