[package]
name = "ipmb"
description = "Inter-process message bus"
version.workspace = true
authors = ["ipmb developers"]
edition = "2021"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
log = "0.4.17"
type-uuid = "0.1.2"
serde_bytes = "0.11.7"
rand = "0.8.5"
once_cell = "1.17.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.serde]
version = "1.0.137"
features = ["serde_derive"]

[dependencies.bincode]
version = "2.0.0-rc.3"
features = ["serde"]

[dependencies.smallvec]
version = "1.9.0"
features = ["serde"]

[dependencies.smol_str]
version = "0.1.23"
features = ["serde"]

[dependencies.ipmb-derive]
workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.125"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
]

[dev-dependencies]
env_logger = "0.10.0"
num-format = "0.4.0"
bytesize = "1.1.0"

[target.'cfg(target_os = "macos")'.dev-dependencies]
core-foundation = "0.9.3"
io-surface = "0.15.1"
