[package]
name = "ipmb"
description = "Inter-process message bus"
version = "0.8.5-20251204"
authors = ["ipmb developers"]
edition = "2021"
rust-version.workspace = true
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bytedance/ipmb"
readme = "../README.md"
keywords = ["ipc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.12"
log = "0.4.27"
type-uuid = "0.1.2"
serde_bytes = "0.11.17"
rand = "0.8.5"
once_cell = "1.21.3"

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.serde]
version = "1.0.219"
features = ["serde_derive"]

[dependencies.bincode]
version = "2.0.1"
features = ["serde"]

[dependencies.smallvec]
version = "1.15.1"
features = ["serde"]

[dependencies.smol_str]
version = "0.3.2"
features = ["serde"]

[dependencies.ipmb-derive]
workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2.174"

[target.'cfg(windows)'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
]

[dev-dependencies]
env_logger = "0.11.8"
num-format = "0.4.4"
bytesize = "2.0.1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
core-foundation = "0.10.1"
io-surface = "0.16.1"
